<resources>
    <!-- Application Name -->
    <string name="app_name" translatable="false">Game Launcher</string>
    <string name="developer">A simple launcher to organize your favorite games.</string>

    <!-- Menu -->
    <string name="add_games">Add manually</string>
    <string name="detect_automatically">Detect Games</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Game list status -->
    <string name="blacklist_cleared">Blacklist cleared and games detected</string>
    <string name="select_game">Select a game:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="game_list_exist">This game has already been added!</string>
    <string name="game_not_found">Game not found</string>
    <string name="game_deleted_success">Successfully removed from the Launcher</string>
    <string name="select_game_error">Could not start</string>

    <!-- Game selection -->
    <string name="browse_game_header">Select a game:</string>

    <!-- Dialog -->
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>

    <!-- Loading and status messages -->
    <string name="coming_soon">Not available</string>
    <string name="loading_hint">Loading…</string>
    <string name="operation_success">Operation completed!</string>

    <!-- Game information -->
    <string name="game_time">Game time:</string>
    <string name="game_info">App information:</string>
    <string name="version">Version:</string>
    <string name="size">Size:</string>
    <string name="no_time_measured">Not measured</string>
    <string name="fab_show_in_settings">Show in Settings</string>

    <!-- Fragment errors -->
    <string name="fragment_icon_error">Could not find the game icon.</string>
    <string name="fragment_info_error">Error retrieving app information.</string>
    <string name="invalid_game_package">This is not a game</string>

    <!-- Settings -->
    <string name="switch_hide_time">Hide game time</string>
    <string name="txt_clear_time">Clear all game activity</string>
    <string name="clear_time_btn">Clear</string>
    <string name="appearance_subtitle">Appearance</string>
    <string name="data_subtitle">Data control</string>
    <string name="time_dialog_title">Confirmation</string>
    <string name="time_dialog_message">"Are you sure you want to reset all recorded game time?"</string>
    <string name="not_games">Nothing here..</string>
</resources>