<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/frame_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:clickable="true"
        android:fillViewport="true"
        android:paddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingBottom="5dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/Settings_Panel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left|top"
                android:layout_weight="1"
                android:gravity="left|top"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="RtlHardcoded,UselessParent">

                <LinearLayout
                    android:id="@+id/Tool_Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/Close_Btn"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:id="@+id/Settings_Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:gravity="left|top"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:text="@string/settings"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Settings_View"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="left|top"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:gravity="left|top"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/General_SubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="0dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="8dp"
                        android:text="@string/appearance_subtitle"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/Htime_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:checked="false"
                        android:gravity="left|top"
                        android:padding="8dp"
                        android:text="@string/switch_hide_time"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Data_SubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="0dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="0dp"
                        android:text="@string/data_subtitle"
                        tools:ignore="RtlSymmetry" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/clear_time_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:gravity="left|top"
                            android:padding="8dp"
                            android:text="@string/txt_clear_time"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/clear_btn"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="5dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:text="@string/clear_time_btn"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:cornerRadius="60dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>